# ros2_vc_template

./: CMakeLists.txt  README.MD  generate_module.sh  package.xml
include/name/: name.h  ros_name.h
launch/: name_component.launch.py  name_node.launch.py
src/: name.cpp  name_node.cpp  ros_name.cpp
